improve Promotion logic